# work-tui

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.githooks/: pre-commit  uninstall.sh
docs/: functions.md  jira-github-workflow.md  workflow-entrypoints.md
src/: app.rs  cache.rs  config.rs  events.rs  git.rs  github.rs  issue.rs  jira.rs  lib.rs  main.rs  notify.rs  repos.rs  theme.rs  ticket.rs  ui.rs
src/actions/: add_label.rs  approve_merge.rs  auto_label.rs  branch_diff.rs  convert_to_story.rs  create_inline_issue.rs  detect_active_branches.rs  fetch_check_run_steps.rs  fetch_children.rs  fetch_ci_logs.rs  fetch_github_pr_detail.rs  fetch_github_prs.rs  fetch_github_statuses.rs  fetch_jira_filters.rs  finish.rs  fix_ci.rs  import_tasks.rs  initialize.rs  link_jira_repos.rs  load_issue_events.rs  mod.rs  openspec_propose.rs  pick_up.rs  poll_ci_status.rs  refresh.rs  scan_import_tasks.rs  sync_story_statuses.rs  tag_jira_repos.rs
src/apis/: github.rs  jira.rs
src/fixtures/: app.rs  issue.rs  mod.rs  pr.rs  render.rs
src/snapshots/: work_tui__app__tests__inline_created_inserts_and_selects_before_refresh.snap  work_tui__app__tests__label_added_rebuilds_ticket_store_repo_matches.snap  work_tui__app__tests__reviewable_pr_notification.snap  work_tui__issue__tests__openspec_propose_prompt.snap  work_tui__issue__tests__pick_up_prompt.snap
src/ui/: ci_logs.rs  command_bar.rs  confirm_dialog.rs  filter_picker.rs  help_overlay.rs  import_tasks.rs  label_picker.rs  list.rs  mod.rs  sidebar.rs  status_bar.rs
src/ui/list/: mod.rs  row.rs
src/utils/: time.rs
(+57 files in other folders)
