[package]
name = "work-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "work-tui"
path = "src/main.rs"

[[bin]]
name = "normalize-labels"
path = "src/bin/normalize_labels.rs"

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process"] }
gouqi = { version = "0.20", features = ["async"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
color-eyre = "0.6"
futures = "0.3"
tui-textarea = { version = "0.7", features = ["crossterm"] }
notify-rust = "4"
